update: com -> cn

--- a/config/_default/languages.zh-cn.toml
+++ b/config/_default/languages.zh-cn.toml
@@ -20,7 +20,7 @@ title = "和光同尘"
   bio = "宠辱不惊，博雅达观，道法自然"
   links = [
     { email = "mailto:markhoo@foxmail.com" },
-    { link = "https://markhoo.com/" },
+    { link = "https://markhoo.cn" },
 #     { amazon = "https://www.amazon.com/hz/wishlist/ls/wishlist-id" },
 #     { apple = "https://www.apple.com" },
 #     { blogger = "https://username.blogspot.com/" },
