--- a/config/_default/languages.zh-cn.toml
+++ b/config/_default/languages.zh-cn.toml
@@ -15,7 +15,8 @@ title = "和光同尘"
 
 [author]
   name = "和光同尘"
-  image = "img/android-chrome-192x192.png"
+  # image = "img/android-chrome-192x192.png"
+  image = "img/avatar.png"
   headline = "终日而思，不如须臾之所学也"
   bio = "宠辱不惊，博雅达观，道法自然"
   links = [
