--- a/config/_default/languages.zh-cn.toml
+++ b/config/_default/languages.zh-cn.toml
@@ -1,7 +1,7 @@
 languageCode = "zh-cn"
 languageName = "zh-cn"
 weight = 1
-title = "和光同尘"
+title = "希言の博客"
 
 [params]
   displayName = "简体中文"
@@ -14,7 +14,7 @@ title = "和光同尘"
   copyright = '©2024 Copyright :thinking_face: <a target="_blank" href="https://beian.miit.gov.cn">苏ICP备17044309号</a><script data-ad-client="ca-pub-2058306854838448" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>'
 
 [author]
-  name = "和光同尘"
+  name = "希言"
   image = "img/android-chrome-192x192.png"
   headline = "终日而思，不如须臾之所学也"
   bio = "宠辱不惊，博雅达观，道法自然"
